--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -27,11 +27,13 @@
         </div>
         <div class="col-md-6">
             <form class="form-inline">
+                <input type="hidden" id="userId">
                 <div class="form-group">
                     <label for="name">What is your name?</label>
                     <input type="text" id="name" class="form-control" placeholder="Your name here...">
                 </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
+                <button id="sendMsg" class="btn btn-default" type="submit">SendMsg</button>
             </form>
         </div>
     </div>
